fix: fix wheel overflow

--- a/src/scss/TimeWheel.scss
+++ b/src/scss/TimeWheel.scss
@@ -268,6 +268,8 @@
         top: 40%;
         transform: translate(-50%, -50%);
         z-index: 10;
+        padding: 10px;
+        overflow: hidden;
     }
 
     .timewheel__title {
